--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -7,11 +7,65 @@ table {
     width: 100%;
     margin: auto;
     border-collapse: collapse;
-  }
-  
-  td {
-    text-align: center;
-  }
-  tbody tr:nth-child(odd) {
-    background: lightgrey;
-  }
+}
+
+td {
+  text-align: center;
+}
+tbody tr:nth-child(odd) {
+  background: lightgrey;
+}
+
+tbody td:not(td:first-of-type):not(td:last-child):hover {
+  transform: scale(1.05);
+  opacity: 0.9;
+}
+th{
+  background-color: green;
+  padding: 20px;
+  color: white;
+}
+.form-header{
+  background-color: green;
+  padding: 8px;
+  color: white;
+  text-align: center;
+}
+
+.form-details{
+  border: 2px solid green;
+}
+
+.link{
+  text-decoration: none;
+  color: green ;
+}
+.link:active{
+  color: white;
+}
+.bigBox{
+  border: 2px solid green;
+  padding: 10px;
+}
+
+.navButton{
+  margin-right: 4px;
+}
+
+.navButton{
+  background-color: white;
+  color: black;
+  transition-duration: 0.4s;
+}
+
+.navButton:hover{
+  background-color: green;
+  color: white;
+  box-shadow: 3px 3px 3px grey;
+  cursor: pointer;
+
+}
+.showNavigation{
+  display: flex;
+  margin-top: 10px;
+}
