--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -81,7 +81,7 @@ tr.row-odd {
 } */
 tr {
   margin-bottom: 8px;
-  border-radius: 4px; 
+  border-radius: 4px;
 }
 /* NAVBAR CSS */
 .navbar {
@@ -174,3 +174,26 @@ input[type="submit"]:hover {
 .New {
   padding-left: 20px;
 }
+/* ERROR MSG CSS */
+.Error {
+  background-color: lightgrey;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px;
+}
+
+.error-button {
+  border-color: #fcb3c1;
+  border-radius: 4px;
+  padding: 10px 25px;
+  background-color: #fcb3c1;
+}
+/* HOME PAGE CSS */
+.Home {
+  text-align: center;
+    padding: 20px;
+    background-color: #f0f0f0;
+    border-radius: 8px;
+    box-shadow: "0 2px 4px rgba(0, 0, 0, 0.1)";
+  };
