--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -143,7 +143,6 @@ form {
   background-color: #fcb3c1;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-
 }
 
 label {
@@ -192,9 +191,5 @@ input[type="submit"]:hover {
 }
 /* HOME PAGE CSS */
 .Home {
-  text-align: center;
-    padding: 20px;
-    background-color: #f0f0f0;
-    border-radius: 8px;
-    box-shadow: "0 2px 4px rgba(0, 0, 0, 0.1)";
-  };
+  background-color: #F6F6F6;
+}
